# NP1_CI_CD

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml
docs/: arquitetura.md  pipeline.md  regras_negocio.md  testes.md  uso.md
scripts/: enviar_notificacao.py
src/carrinho_compras/: carrinho.py  desconto.py  frete.py  item_carrinho.py  pedido.py  produto.py
testes/: test_carrinho.py  test_casos_importunos.py  test_desconto.py  test_erros_extensao.py  test_frete.py  test_item_carrinho.py  test_pedido.py  test_produto.py
